<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_marker">Show markers</string>
    <string name="menu_overlays">Show overlays</string>
    <string name="menu_position">Show position</string>
    <string name="menu_route">Show route</string>
    <string name="menu_maptype">Change maptype &#8230;</string>
    <string name="menu_maptype_roadmap">Roadmap</string>
    <string name="menu_maptype_terrain">Terrain</string>
    <string name="menu_maptype_satellite">Aerial photos</string>
    <string name="menu_maptype_hybrid">Aerial photos with roads</string>
    <string name="menu_maptype_none">Hide map</string>
    <string name="menu_about">About</string>

</resources>