<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_marker"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/menu_marker"/>
    <item
        android:id="@+id/menu_overlays"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/menu_overlays"/>
    <item
        android:id="@+id/menu_position"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/menu_position"/>
    <item
        android:id="@+id/menu_route"
        android:checkable="true"
        android:showAsAction="never"
        android:title="@string/menu_route"/>
    <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>